# YAE-LLM

./: README.md  pyproject.toml  qwen3.py
src/: YaeConfig.py  YaeMLP.py  YaeRMSNorm.py  YaeRotaryEmbedding.py  modeling_yae.py
src/utils/: yae_model.py  yae_omni.py
web/: Tensors.html  YaeMLP.html  YaeRMSNorm.html  YaeRotaryEmbedding.html
